# progrs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  dirwatcher.rs  events.rs  lib.rs  parser.rs  recorder.rs
src/parser/: flags.rs  mod.rs
