[package]
name = "progrs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
confique = { version = "0.3.0", features = ["toml"] }
ctrlc = "3.4.5"
directories = "6.0.0"
futures-util = "0.3.31"
inotify = "0.11.0"
memchr = "2.7.4"
nix = { version = "0.29.0", features = ["signal"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
